# cyberhack-2026

./: .gitignore  .tool-versions  DESIGN.md  Makefile  PRODUCT.md  README.md  amplify.yml  buf.gen.yaml  buf.yaml  docker-compose.yml  go.work  index.html  knowledge-graph.json  meta.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: copilot-instructions.md
.github/workflows/: build.yaml  deploy-production.yaml  deploy-staging.yaml  lint.yaml
.kiro/settings/: mcp.json
.kiro/skills/add-buildpad/: SKILL.md
.kiro/skills/add-external-oauth/: SKILL.md
.kiro/skills/add-microfrontend/: SKILL.md
.kiro/skills/add-microservice/: SKILL.md
.kiro/skills/add-multitenancy/: SKILL.md
.kiro/skills/amplify-env-vars/: SKILL.md
.kiro/skills/authentication-proxy/: SKILL.md
.kiro/skills/buildpad-reference/: SKILL.md
.kiro/skills/code-simplification/: SKILL.md
.kiro/skills/context-engineering/: SKILL.md
.kiro/skills/create-api-route/: SKILL.md
.kiro/skills/create-collection/: SKILL.md
.kiro/skills/create-component/: SKILL.md
.kiro/skills/create-cron/: SKILL.md
.kiro/skills/create-custom-permissions/: SKILL.md
.kiro/skills/create-feature/: SKILL.md
.kiro/skills/create-migration/: SKILL.md
.kiro/skills/create-project/: SKILL.md
.kiro/skills/create-rbac/: SKILL.md
.kiro/skills/create-service/: SKILL.md
.kiro/skills/create-tests/: SKILL.md
.kiro/skills/create-workflow/: SKILL.md
.kiro/skills/daas-platform/: SKILL.md
.kiro/skills/debugging-and-error-recovery/: SKILL.md
.kiro/skills/generate-docs/: SKILL.md
.kiro/skills/git-workflow-and-versioning/: SKILL.md
.kiro/skills/hooks-extensions/: SKILL.md
.kiro/skills/idea-refine/: SKILL.md
.kiro/steering/: AGENTS.md
.kiro/templates/: README.md
ai-training/: .gitignore
ai-training/scripts/: fuzzy_quality_checker.py  split_dataset.py  train.py
apps/ai-worker/: Dockerfile  main.py  pyproject.toml
apps/ai-worker/simaops_proto/simaops/admin/v1/: admin_pb2.py  admin_pb2_grpc.py
apps/ai-worker/simaops_proto/simaops/audit/v1/: audit_pb2.py  audit_pb2_grpc.py
apps/ai-worker/simaops_proto/simaops/dashboard/v1/: dashboard_pb2.py  dashboard_pb2_grpc.py
apps/ai-worker/simaops_proto/simaops/dispatch/v1/: dispatch_pb2.py  dispatch_pb2_grpc.py
apps/ai-worker/simaops_proto/simaops/lot/v1/: lot_pb2.py  lot_pb2_grpc.py
apps/ai-worker/simaops_proto/simaops/qc/v1/: qc_pb2.py  qc_pb2_grpc.py
apps/ai-worker/simaops_proto/simaops/review/v1/: review_pb2.py  review_pb2_grpc.py
apps/ai-worker/simaops_proto/simaops/warehouse/v1/: warehouse_pb2.py  warehouse_pb2_grpc.py
apps/api/: .env.example  Dockerfile  go.mod  go.sum  sqlc.yaml
apps/outbox-publisher/: Dockerfile  go.mod  go.sum
apps/warehouse-intelligence/: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_SCAFFOLD.md  README.md  config.py  pyproject.toml  requirements.txt
apps/warehouse-intelligence/src/: __init__.py  api.py  cold_chain_monitoring.py  hazard_segregation.py  smart_slotting.py
apps/warehouse-intelligence/tests/: test_warehouse_intelligence.py
apps/web/: .dockerignore  Dockerfile  README.md  package.json  svelte.config.js
assets/: CodeViewer-H6xQsVT5.js  KeyboardShortcutsHelp-BzFfR7eJ.js  LearnPanel-BVp1LioC.js  OnboardingOverlay-GwO7qVNE.js  PathFinderModal-CxgZo_EY.js  index-D9l53uPB.js
db/migrations/: 001_initial_schema.sql  002_outbox_publishing_state.sql  003_dispatches.sql  004_composite_indexes.sql  005_role_permissions.sql  006_app_settings.sql  007_visibility_reversibility.sql  README.md
db/seed/: data.sql  reset-warehouse-capacity.sql
deploy/keycloak/: harden-live-realm.sh  keycloak-postgres.yaml  keycloak.yaml  simaops-realm.json  sync-api-client-secret.sh
docs/: api-contract.md  architecture.md  audit-log.md  demo-script.md  deployment.md  oci-ci-deploy-user.md  rbac.md
infra/otel/: otel-collector-config.yaml
infra/sst/: package.json  sst.config.ts
infra/values/: kube-prometheus-stack.yaml  production.yaml  staging.yaml
load-tests/: .gitignore  PLAN.md  README.md
load-tests/lib/: auth.js  helpers.js  pipeline.js
load-tests/scenarios/: smoke.js  soak.js  validation.js
load-tests/scripts/: chaos-ai-worker.sh  chaos-nats.sh  chaos-outbox-publisher.sh  postflight.sh  preflight.sh  run-smoke.sh  run-soak.sh  run-validation.sh
scripts/: e2e-realtime.sh  e2e-token-refresh.sh  wait-for-stack.sh
src/: train_cls.py
(+246 files in other folders)
