[project]
name = "simaops-ai-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "nats-py>=2.9.0",
  "pymysql>=1.1.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
inference = [
  "opencv-python-headless>=4.10.0",
  "onnxruntime>=1.19.0",
  "numpy>=2.0.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
