[project]
name = "simaops-ai-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "nats-py>=2.9.0",
  "pymysql>=1.1.0",
  "dbutils>=3.1.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "httpx>=0.28.0",
  "prometheus-client>=0.21.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
]

[project.optional-dependencies]
inference = [
  "opencv-python-headless>=4.10.0",
  "onnxruntime>=1.19.0",
  "numpy>=2.0.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
